updated .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@
 
 # IntelliJ
 /.idea
-*.impl
+*.iml
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
@@ -25,5 +25,3 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
-
-# Created by .ignore support plugin (hsz.mobi)
